--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,15 @@ description: Updates to Chalk!
 
 ---
 
+## July 26, 2024
+
+### Dashboard improvements
+
+* The offline query page of the dashboard now shows live query progress. After query completion, the query page will
+  also show how long each resolver took to run."
+* The Kubernetes resource page in the dashboard now allows you to group resources by application, component, and other
+  common groupings.
+
 ## July 19, 2024
 
 ### Datasets and dataset revisions now support previews and summaries
