--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,8 +11,8 @@ description: Updates to Chalk!
 
 * The offline query page of the dashboard now shows live query progress. After query completion, the query page will
   also show how long each resolver took to run."
-* The Kubernetes resource page in the dashboard now allows you to group resources by application, component, and other
-  common groupings.
+* The Kubernetes resource page in the dashboard shows which kinds of hardware resources are currently running. It also
+  allows you to group resources by application, component, and other common groupings.
 
 ## July 19, 2024
 
